# webnovelpub-dump

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs  parser.rs
